--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <body>
 <div id="container">
   <% if logged_in? %>
-    <%= button_to "Logout", sessions_path, method: :delete %>
+    <%= button_to "Logout", login_path, method: :delete %>
   <% end %>
   <br>
   <%= yield %>
