--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
-<h1>Sign in</h1>
+<h1>Sign up</h1>
 
-<div class="form" style="display: inline-block">
+<div>
   <%= form_for @user do |f| %>
     <%= f.label :first_name %>
     <%= f.text_field :first_name, placeholder: "Name" %>
