update registration form

--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -4,12 +4,12 @@
   <%= form_with model: @user, url: registrations_url do |f| %>
     <div>
       <%= f.label :first_name %>
-      <%= f.text_field :first_name, placeholder: "Name" %>
+      <%= f.text_field :first_name, placeholder: "First Name" %>
     </div>
     <br>
     <div>
       <%= f.label :last_name %>
-      <%= f.text_field :last_name, placeholder: "Surname" %>
+      <%= f.text_field :last_name, placeholder: "Last Name" %>
     </div>
     <br>
     <div>
