--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <h2>Welcome to the page of <%= @user.first_name %> <%= @user.last_name %></h2>
 
-  <% if current_user == @user %>
-    <h3>Authorized</h3>
-  <% end %>
+<% if current_user == @user %>
+  <h3>Authorized</h3>
+<% end %>
+<br>
+<%= button_to "Log out", session_path, method: :delete %>
