--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New Category</h1>
 
 <div>
-  <%= form_with model: @category do |f| %>
+  <%= form_with model: @category, url: categories_url do |f| %>
     <div>
       <%= f.label :name %>
       <%= f.text_field :name, placeholder: "Category Name" %>
