--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,4 +4,10 @@
   <ul>
     <%= render @categories %>
   </ul>
+  <% if @pagy.pages > 1 %>
+    <div>
+      <%== pagy_nav(@pagy) %>
+      <%== pagy_info @pagy %>
+    </div>
+  <% end %>
 </div>
