--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -5,7 +5,7 @@
     <div>
       <%= f.label :name %>
       <%= f.text_field :name, placeholder: "Category Name" %>
-      <%= @category.errors.messages_for(:name).first if @category.errors.any? %>
+      <%= @category.errors.messages_for(:name).join(", ") if @category.errors.any? %>
     </div>
     <br>
     <%= f.submit "Create Category" %>
