--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -1,5 +1,8 @@
 <% flash.each do |type, msg| %>
-  <div>
+  <% if type == "error" %>
+    <% type = "danger" %>
+  <% end %>
+  <div class="alert alert-<%= type %>" role="alert">
     <%= msg %>
   </div>
 <% end %>
