--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,15 +1,20 @@
-<h1>Categories</h1>
+<header class="d-flex justify-content-between">
+  <h1>Categories</h1>
+  <div>
+    <%= link_to "Add Category", new_category_path, class: "btn btn-primary" %>
+  </div>
+</header>
 
 <div>
-  <ul>
-    <%= render @categories %>
-  </ul>
-  <% if @pagy.pages > 1 %>
-    <div>
-      <%== pagy_nav(@pagy) %>
-      <%== pagy_info @pagy %>
-    </div>
+  <% if @categories.any? %>
+    <ul class="list-group list-group-flush">
+      <%= render @categories %>
+    </ul>
+    <% if @pagy.pages > 1 %>
+      <div>
+        <%== pagy_nav(@pagy) %>
+        <%== pagy_info @pagy %>
+      </div>
+    <% end %>
   <% end %>
 </div>
-<br>
-<%= link_to "Add Category", new_category_path %>
