--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,17 +1,30 @@
 <header>
-  <div class="container">
-    <nav>
-      <ul>
-        <li><%= link_to "Home", root_path %></li>
+  <div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand mb-0 h1" href="/">Home</a>
         <% if logged_in? %>
-          <li><%= link_to "Profile", current_user %></li>
-          <li><%= link_to "Your categories", categories_path %></li>
-          <li><%= button_to "Log out", session_path(current_user), method: :delete %></li>
+          <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Account
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark">
+                  <li><%= link_to "Profile", current_user, class: "dropdown-item" %></li>
+                  <li><a class="dropdown-item" href="/categories">Your Categories</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <li><%= button_to "Log out", session_path(current_user), method: :delete, class: "dropdown-item" %></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         <% else %>
-          <li><%= link_to "Log in", new_session_path %></li>
-          <li><%= link_to "Sign Up", new_registration_path %></li>
+          <div><%= link_to "Log in", new_session_path, class: "btn btn-outline-light" %></div>
         <% end %>
-      </ul>
+      </div>
     </nav>
   </div>
 </header>
