--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,5 +1,8 @@
 <li class="list-group-item d-flex justify-content-between"><%= category.name %>
-  <div class="ms-3">
-    <%= button_to "Delete", category_path(category), method: :delete, class: "btn btn-danger btn-sm" %>
+  <div class="d-flex justify-content-end">
+    <div>
+    <%= link_to "Edit", edit_category_path(category), class: "btn btn-secondary btn-sm ms-3" %>
+    </div>
+    <%= button_to "Delete", category_path(category), method: :delete, class: "btn btn-danger btn-sm ms-3" %>
   </div>
 </li>
