--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,7 @@
                 <ul class="dropdown-menu dropdown-menu-dark">
                   <li><%= link_to "Profile", current_user, class: "dropdown-item" %></li>
                   <li><a class="dropdown-item" href="/categories">Your Categories</a></li>
+                  <li><a class="dropdown-item" href="/events">Your Events</a></li>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
