update specs with category search and pagination

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -27,7 +27,7 @@
     </ul>
     <% if @pagy.pages > 1 %>
       <div>
-        <%== pagy_nav(@pagy) %>
+        <%== pagy_bootstrap_nav(@pagy) %>
         <%== pagy_info @pagy %>
       </div>
     <% end %>
