--- a/app/views/events/_search_form.html.erb
+++ b/app/views/events/_search_form.html.erb
@@ -2,11 +2,9 @@
   <div class="d-flex">
     <%= f.search_field :name_cont, placeholder: "Event Name", class: "form-control me-2" %>
 
-<!--      <div>-->
-        <%#= f.label :category_id_eq %>
-        <%#= f.select :category_id_eq, options_for_select(current_user.categories), include_blank: true %>
-        <%#= f.select :category_eq, current_user.categories, include_blank: true %>
-<!--      </div>-->
     <%= f.submit 'Search', class: "btn btn-dark" %>
+  </div>
+  <div class="input-group mb-3">
+    <%= f.select :category_id_eq, options_for_select(current_user.categories.order(:name).map { |category| [category.name, category.id] }), include_blank: true %>
   </div>
 <% end %>
