--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,13 +4,13 @@
     <span class="badge rounded-pill bg-primary bg"># <%= @event.category.name %></span>
   </div>
   <div class="ms-2">
-    <%= @event.date.to_formatted_s(:long_ordinal) %>
+    <%= @event.starts_at.to_formatted_s(:long_ordinal) %>
   </div>
 </header>
 <div class="d-flex justify-content-end text-success">
-  <% if @event.notification.present? %>
+  <% if @event.notify_at.present? %>
     <span class="me-1">Notification is set on</span>
-    <%= @event.notification.to_formatted_s(:short) %>
+    <%= @event.notify_at.to_formatted_s(:short) %>
   <% end %>
 </div>
 <div class="mt-4">
