--- a/app/views/events/_search_form.html.erb
+++ b/app/views/events/_search_form.html.erb
@@ -1,10 +1,10 @@
 <%= search_form_for @search_result, html: { autocomplete: 'off' } do |f| %>
   <div class="d-flex">
     <%= f.search_field :name_cont, placeholder: "Event Name", class: "form-control me-2" %>
-
     <%= f.submit 'Search', class: "btn btn-dark" %>
   </div>
-  <div class="input-group mb-3">
-    <%= f.select :category_id_eq, options_for_select(current_user.categories.order(:name).map { |category| [category.name, category.id] }), include_blank: true %>
+  <div class="input-group d-flex mt-3">
+    <%= f.label :category_id_eq, "Category:", class: "input-group-text" %>
+    <%= f.select :category_id_eq, options_for_select(current_user.categories.order(:name).map { |category| [category.name, category.id] }, params[:query] ? { :selected => params[:query]["category_id_eq"] } : { :selected => "" }), { include_blank: true }, { class: "form-select" } %>
   </div>
 <% end %>
