--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -2,7 +2,7 @@
   <div class="card-body d-flex flex-column">
     <div class="d-flex justify-content-between">
       <div class="d-flex">
-        <h4 class="card-title text-break"> <%= truncate(event.name, length: 30) %></h4>
+        <h4 class="card-title text-break"> <%= event.truncated_name %></h4>
         <% if event.all_day %>
           <div>
           <small class="ms-1 rounded-pill badge bg-secondary">All day</small>
@@ -11,15 +11,15 @@
       </div>
       <div class="ms-2">
         <% if event.all_day %>
-          <%= event.starts_at.to_date.to_formatted_s(:long_ordinal) %>
+          <%= event.decorated_starts_at_date %>
         <% else %>
-          <span><span class="text-secondary small">from: </span><%= event.starts_at.to_formatted_s(:long) %></span>
-          <p><span class="text-secondary small me-3">to: </span><%= event.ends_at.to_formatted_s(:long) %></p>
+          <span><span class="text-secondary small">from: </span><%= event.decorated_starts_at %></span>
+          <p><span class="text-secondary small me-3">to: </span><%= event.decorated_ends_at %></p>
         <% end %>
       </div>
     </div>
     <div class="card-text">
-      <div class="text-secondary"><small> <%= truncate(event.description, length: 200) %></small></div>
+      <div class="text-secondary"><small> <%= event.truncated_description %></small></div>
     </div>
     <div class="d-flex justify-content-end mt-auto">
       <% if event.notify_at.present? %>
