--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,39 +1,68 @@
 <h1>New Event</h1>
 
-<div class="d-inline-flex mx-auto">
+<div class="mt-4">
   <%= form_with model: @event, url: events_url do |f| %>
-    <div class="mb-3 d-flex">
-      <div>
-        <%= f.check_box :all_day, class: "form-check-input me-2" %>
+    <div class="row mb-3">
+      <div class="col">
+        <div class="mb-3">
+          <%= f.label :name, class: "form-label" %>
+          <%= f.text_field :name, placeholder: "Name", class: "form-control" %>
+          <small class="text-danger">
+            <%= @event.errors.messages_for(:name).join(", ") if @event.errors.any? %>
+          </small>
+        </div>
+        <div class="mb-3">
+          <%= f.label :description, class: "form-label" %>
+          <%= f.text_area :description, placeholder: "Please enter description", class: "form-control" %>
+        </div>
+        <div class="mb-3">
+          <div class="input-group d-flex">
+            <%= f.label :category_id, "Category:", class: "input-group-text" %>
+            <%= f.select :category_id, category_options_for_select(@event.category_id), { include_blank: true }, { class: "form-select" } %>
+            <div>
+              <%= link_to "New Category", new_category_path, class: "btn btn-outline-dark ms-2 mt-1 btn-sm" %>
+            </div>
+          </div>
+          <small class="text-danger">
+            <%= @event.errors.messages_for(:category).join(", ") if @event.errors.any? %>
+          </small>
+        </div>
       </div>
-      <%= f.label :all_day, "All-day", class: "form-check-label" %>
-    </div>
-    <div class="mb-3">
-      <%= f.label :name, class: "form-label" %>
-      <%= f.text_field :name, placeholder: "Name", class: "form-control" %>
-      <small class="text-danger">
-        <%= @event.errors.messages_for(:name).join(", ") if @event.errors.any? %>
-      </small>
-    </div>
-    <div class="mb-3">
-      <%= f.label :description, class: "form-label" %>
-      <%= f.text_area :description, placeholder: "Please enter description", class: "form-control" %>
-    </div>
-    <div class="mb-3">
-      <%= f.label :starts_at, class: "form-label" %>
-      <%= f.datetime_select :starts_at, class: "form-control" %>
-      <small class="text-danger">
-        <%= @event.errors.messages_for(:starts_at).join(", ") if @event.errors.any? %>
-      </small>
-    </div>
-    <div class="mb-3">
-      <div class="input-group d-flex">
-        <%= f.label :category_id, "Category:", class: "input-group-text" %>
-        <%= f.select :category_id, options_for_select(current_user.categories.order(:name).map { |category| [category.name, category.id] }, :selected => @event.category_id), { include_blank: true }, { class: "form-select" } %>
+      <div class="col">
+        <div class="mb-3 d-flex">
+          <div>
+            <%= f.check_box :all_day, checked: false, class: "form-check-input me-2" %>
+          </div>
+          <%= f.label :all_day, "All-day", class: "form-check-label" %>
+        </div>
+        <div class="mb-3">
+          <%= f.label :starts_at, class: "form-label" %>
+          <%= f.datetime_select :starts_at, { :include_blank => true, :default => nil, class: "form-control" } %>
+          <small class="text-danger">
+            <%= @event.errors.messages_for(:starts_at).join(", ") if @event.errors.any? %>
+          </small>
+        </div>
+        <div class="mb-3" id="endsAtTime">
+          <%= f.label :ends_at, class: "form-label me-2" %>
+          <%= f.datetime_select :ends_at, { :include_blank => true, :default => nil, class: "form-control" } %>
+          <small class="text-danger">
+            <%= @event.errors.messages_for(:ends_at).join(", ") if @event.errors.any? %>
+          </small>
+        </div>
+        <div class="mb-3 d-flex">
+          <div>
+            <%= f.check_box :notify_at_checkbox, checked: false, class: "form-check-input me-2" %>
+          </div>
+          <%= f.label :notify_at_checkbox, "Set a notification", class: "form-check-label" %>
+        </div>
+        <div class="mb-3" id="notificationTime">
+          <%= f.label :notify_at, class: "form-label" %>
+          <%= f.datetime_select :notify_at, { :include_blank => true, :default => nil, class: "form-control" } %>
+          <small class="text-danger">
+            <%= @event.errors.messages_for(:notify_at_at).join(", ") if @event.errors.any? %>
+          </small>
+        </div>
       </div>
-      <small class="text-danger">
-        <%= @event.errors.messages_for(:category_id).join(", ") if @event.errors.any? %>
-      </small>
     </div>
     <%= f.submit "Create Event", class: "btn btn-primary" %>
   <% end %>
