--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,19 +1,37 @@
+<% if policy(@event).update? %>
+  <div class="d-flex justify-content-end mb-4">
+    <div>
+      <%= link_to "Edit", edit_event_path(@event), class: "btn btn-secondary" %>
+    </div>
+  </div>
+<% end %>
 <header class="d-flex justify-content-between">
   <div>
-    <div class="d-flex">
-      <h2><%= @event.name %></h2>
-      <% if @event.all_day %>
-        <span class="ms-1 h-25 badge bg-secondary">All day</span>
-      <% end %>
+    <div class="text-break">
+      <h2 style="max-width: 800px"><%= @event.name %></h2>
     </div>
-    <span class="badge rounded-pill bg-primary"># <%= @event.category.name %></span>
   </div>
-  <div class="ms-2">
-    <%= @event.decorated_time_interval %>
+  <div class="d-flex justify-content-end" style="min-width: 300px; max-height: 50px">
+    <% if @event.all_day %>
+      <div>
+        <div class="ms-1 h-50 badge rounded-pill bg-info">All day</div>
+      </div>
+    <% end %>
+    <div class="ms-2 fs-5 text-end">
+      <%= @event.decorated_time_interval %>
+    </div>
   </div>
 </header>
-<div class="d-flex justify-content-end text-success">
-  <span><%= @event.decorated_notify_at %></span>
+<div class="d-flex justify-content-between w-100">
+  <div>
+    <span class="badge rounded-pill bg-primary"><%= @event.decorated_category_tag %></span>
+    <% unless policy(@event).update? %>
+      <span class="badge rounded-pill bg-secondary">Expired</span>
+    <% end %>
+  </div>
+  <div>
+    <span class="text-success"><%= @event.decorated_notify_at %></span>
+  </div>
 </div>
 <div class="mt-4">
   <div class="text-bg-secondary">
