update js script for events new/edit pages

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Edit Event</h1>
 
 <div class="mt-4">
-  <%= form_with model: @event, id: "events_new_form", method: :patch do |f| %>
+  <%= form_with model: @event, id: "events_edit_form", method: :patch do |f| %>
     <div class="row mb-3">
       <div class="col">
         <div class="mb-3">
@@ -51,7 +51,7 @@
         </div>
         <div class="mb-3 d-flex">
           <div>
-            <%= f.check_box :notify_at_checkbox, checked: @event.notify_at?, class: "form-check-input me-2", id: "notify_at_checkbox" %>
+            <%= f.check_box :notify_at_checkbox, checked: @event.notify_at? , class: "form-check-input me-2", id: "notify_at_checkbox" %>
           </div>
           <%= f.label :notify_at_checkbox, "Set a notification", class: "form-check-label" %>
         </div>
