--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -10,7 +10,7 @@
         <% end %>
         <% unless policy(event).update? %>
           <div>
-            <span class="badge rounded-pill bg-secondary ms-1">Expired</span>
+            <span class="badge rounded-pill bg-secondary ms-1">Outdated</span>
           </div>
         <% end %>
       </div>
