update jquery scripts

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New Event</h1>
 
 <div class="mt-4">
-  <%= form_with model: @event, url: events_url, id: "events_new_form" do |f| %>
+  <%= form_with model: @event, url: events_url, id: "new_event_form" do |f| %>
     <div class="row mb-3">
       <div class="col">
         <div class="mb-3">
@@ -37,27 +37,31 @@
         </div>
         <div class="mb-3">
           <%= f.label :starts_at, class: "form-label" %>
-          <%= f.datetime_select :starts_at, { :include_blank => true, :default => nil, class: "form-control" } %>
+          <%= f.datetime_select :starts_at, { :include_blank => true, selected: Time.current, class: "form-control", start_year: Date.current.year } %>
           <small class="text-danger">
             <%= @event.errors.messages_for(:starts_at).join(", ") if @event.errors.any? %>
           </small>
         </div>
         <div class="mb-3" id="ends_at_time">
           <%= f.label :ends_at, class: "form-label me-2" %>
-          <%= f.datetime_select :ends_at, { :include_blank => true, :default => nil, class: "form-control" } %>
+          <%= f.datetime_select :ends_at, { :include_blank => true, :default => nil, class: "form-control", start_year: Date.current.year } %>
           <small class="text-danger">
             <%= @event.errors.messages_for(:ends_at).join(", ") if @event.errors.any? %>
           </small>
         </div>
         <div class="mb-3 d-flex">
-          <div>
-            <%= f.check_box :notify_at_checkbox, checked: false, class: "form-check-input me-2", id: "notify_at_checkbox" %>
-          </div>
-          <%= f.label :notify_at_checkbox, "Set a notification", class: "form-check-label" %>
+            <div>
+              <input type="checkbox" class="form-check-input me-2" id="notify_at_checkbox"
+                     <% if @event.notify_at? %>
+                     checked
+                     <% end %>
+                     >
+            </div>
+            <label for="notify_at_checkbox" class="form-check-label">Set a notification</label>
         </div>
         <div class="mb-3" id="notification_time">
           <%= f.label :notify_at, class: "form-label" %>
-          <%= f.datetime_select :notify_at, { :include_blank => true, :default => nil, class: "form-control" } %>
+          <%= f.datetime_select :notify_at, { :include_blank => true, :default => nil, class: "form-control", start_year: Date.current.year } %>
           <small class="text-danger">
             <%= @event.errors.messages_for(:notify_at).join(", ") if @event.errors.any? %>
           </small>
