--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,29 @@
-<h2>Welcome to the page of <%= current_user.first_name %> <%= current_user.last_name %></h2>
-
-<br>
-<%= button_to "Log out", session_path, method: :delete, class: "btn btn-primary" %>
+<header class="d-flex justify-content-between">
+  <h2 class="mb-4">Welcome to the page of <%= current_user.first_name %> <%= current_user.last_name %></h2>
+  <%= button_to "Log out", session_path, method: :delete, class: "btn btn-primary btn-sm" %>
+</header>
+<% if @current_events.present? %>
+  <div>
+    <h3>Current events - <%= @current_events.count %></h3>
+    <div class="mb-2 d-flex flex-wrap">
+      <%= render @current_events %>
+    </div>
+  </div>
+<% end %>
+<div>
+  <h3>Today events - <%= @today_all_day_events.count %></h3>
+  <% if @today_all_day_events.empty? %>
+    <br>
+    <span>You don't have any events today.</span>
+  <% else %>
+    <div class="mb-2 d-flex flex-wrap">
+      <%= render @today_all_day_events %>
+    </div>
+    <% if @pagy.pages > 1 %>
+      <div>
+        <%== pagy_bootstrap_nav(@pagy) %>
+        <%== pagy_info @pagy %>
+      </div>
+    <% end %>
+  <% end %>
+</div>
