--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,5 @@
-<header class="d-flex justify-content-between mb-2">
+<header class="mb-2">
   <h1>Your Events</h1>
-  <div>
-    <%= link_to "Add Event", new_event_path, class: "btn btn-primary" %>
-  </div>
 </header>
 
 <div class="mb-4">
