--- a/app/views/users/_today_all_day_events.html.erb
+++ b/app/views/users/_today_all_day_events.html.erb
@@ -1,4 +1,4 @@
-<div class="tab-pane active" id="today_events" role="tabpanel">
+<div class="tab-pane" id="today_events" role="tabpanel">
   <div>
     <% if @today_all_day_events.empty? %>
       <span class="mt-4">You don't have any events today.</span>
