--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,11 +7,10 @@
   </header>
   <ul class="nav nav-tabs" role="tablist">
     <li class="nav-item" role="presentation">
-      <a class="nav-link active" id="today_events_tab" href="#today_events">Today Events</a>
+      <a class="nav-link" id="today_events_tab" href="#today_events">Today Events</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a class="nav-link" id="current_events_tab" href="#current_events">Current
-        Events</a>
+      <a class="nav-link" id="current_events_tab" href="#current_events">Current Events</a>
     </li>
   </ul>
   <div class="tab-content mt-3">
