--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,7 @@
                   <li><%= link_to "Profile", current_user, class: "dropdown-item" %></li>
                   <li><a class="dropdown-item" href="/categories">Your Categories</a></li>
                   <li><a class="dropdown-item" href="/events">Your Events</a></li>
+                  <li><%= link_to "Settings", edit_setting_path(current_user), class: "dropdown-item" %></li>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
