--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -42,7 +42,7 @@
     <div class="text-end h6">Forecast for this day:</div>
     <% if @request_error %>
       <div class="text-end">
-        <%= @request_error %>
+        <%= @request_error.html_safe %>
       </div>
     <% else %>
       <div class="d-flex justify-content-end">
