update event notification

--- a/app/views/notification_mailer/event_notification.text.erb
+++ b/app/views/notification_mailer/event_notification.text.erb
@@ -2,6 +2,6 @@ Hello, <%= @user.first_name %> <%= @user.last_name %>!
 ===============================================
 
 You have <%= @event.name %> on <%= @event.starts_at %>.
-See all information on our
+See all information on our website.
 
 Have a great day!
